[gd_scene load_steps=5 format=2]

[ext_resource path="res://Entities/Spaces/ColoredSpace/ColoredSpace.gd" type="Script" id=1]
[ext_resource path="res://Components/SpaceComponent.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/SpaceColored.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 165, 165 )

[node name="ColoredSpace" type="Area2D"]
script = ExtResource( 1 )
piece_type = "ColoredSpace"

[node name="SpaceComponent" parent="." instance=ExtResource( 2 )]

[node name="Outline" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="Highlighted" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.45098 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
[connection signal="mouse_entered" from="." to="." method="_on_NormalSpace_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_NormalSpace_mouse_exited"]
